samples/_failures_safe/1761197772_4f8780_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1cb0c5dd.c: In function ‘main’:
./samples/SAFE/__tmp_1cb0c5dd.c:168:28: error: missing terminating " character
  168 |                     printf("\nMatrix Addition Result
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_1cb0c5dd.c:168:21: error: expected expression at end of input
  168 |                     printf("\nMatrix Addition Result
      |                     ^~~~~~
./samples/SAFE/__tmp_1cb0c5dd.c:168:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1cb0c5dd.c:168:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1cb0c5dd.c:168:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1cb0c5dd.c:168:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1cb0c5dd.c:168:21: error: expected declaration or statement at end of input
